--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "concurrently": "^3.5.0",
-    "axios": "^0.17.0",
-    "json-server": "^0.12.0",
+    "json-server": "^0.12.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2"
@@ -27,7 +27,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "cypress": "3.3.2",
+    "cypress": "^3.4.1",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0"
